# Firewall-BPF

./: Cargo.toml  README.md  blockedPort  ipInfo.py  map_ui.py
SMIYC_engine/: Cargo.toml  Makefile.toml  scriptLoad.sh  scriptUnload.sh
SMIYC_engine/src/: main.rs
c_core/: block_all.c
engine/firewall-probes/: Cargo.toml
engine/firewall-probes/src/block_rules/: main.rs  mod.rs
engine/firewall-userspace/: Cargo.toml  main.rs  vfsreadlat.rs
engine/firewall-userspace/examples/: block_rules.rs  elastic_mapping.rs  network_struct.rs  network_tool.rs  userspace_map.rs
filter_core/: Cargo.toml  Makefile.toml  scriptLoad.sh  scriptUnload.sh
filter_core/src/: limit-consumers.rs  main.rs
firewall/: Cargo.toml
firewall-engine/: Cargo.toml
firewall-engine/src/: lib.rs
firewall-engine/src/block_http/: .main.rs.swp  main.rs
tracing/: tcpconnect.py
user-interface/: NameProc.sh  Port.txt  file_management.go  go.mod  go.sum  ipInfo.py  main.go  map_ui.py  myProcess.sh  port_toolbox.go  test.py
user-interface/file_management/: file_management.go  port_toolbox.go
user-interface/port_toolbox/: port_toolbox.go
