[package]
name = "filter_core"
version = "0.1.0"
authors = ["Valentin Bru <valentin.bru@isen.yncrea.fr>"]
edition = "2018"

[dependencies]
redbpf = { version = "1.3.0", branch = "tc-action", features = ["load"] }
anyhow = "1.0"
# BPF
redbpf-macros = {version = "1.0", branch = "tc-action", optional = true }
redbpf-probes = {version = "1.0", branch = "tc-action", optional = true }
memoffset = { version = "0.5", optional = true }

[features]
default = []
probes = ["redbpf-macros", "redbpf-probes", "memoffset"]

[[bin]]
name = "limit"
path = "src/limit-consumers.rs"
required-features = ["probes"]
