[package]
name = "filter_core"
version = "0.1.0"
authors = ["Valentin Bru <valentin.bru@isen.yncrea.fr>"]
edition = "2018"

[dependencies]
redbpf = { version = "", path = "../../redbpf/redbpf", features = ["load"] }
anyhow = "1.0"
# BPF
redbpf-macros = {version = "", path = "../../redbpf/redbpf-macros", optional = true }
redbpf-probes = {version = "", path = "../../redbpf/redbpf-probes", optional = true }
memoffset = { version = "0.5", optional = true }

[features]
default = []
probes = []

[[bin]]
name = "limit"
path = "src/limit-consumers.rs"
required-features = ["probes"]
